[gd_scene load_steps=6 format=2]

[ext_resource path="res://Escenas/Battle/Battle_System.gd" type="Script" id=1]
[ext_resource path="res://Recursos/Battle/Fondo/Pasto1.jpg" type="Texture" id=2]
[ext_resource path="res://Escenas/Battle/Entidades/arche.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escenas/Battle/Entidades/Personaje.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/Battle/MenuBatalla.tscn" type="PackedScene" id=5]

[node name="Battle_System" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Fondo" type="Sprite" parent="." index="0"]

position = Vector2( 517.683, 300.915 )
scale = Vector2( 1.6051, 1.24741 )
texture = ExtResource( 2 )

[node name="arche" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 1264.29, 265.899 )
_sections_unfolded = [ "Transform" ]

[node name="Personaje1" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( -344.911, 249.495 )

[node name="Personaje2" parent="." index="3" instance=ExtResource( 4 )]

visible = false
position = Vector2( -344.911, 249.495 )

[node name="Personaje3" parent="." index="4" instance=ExtResource( 4 )]

visible = false
position = Vector2( -344.911, 249.495 )

[node name="MenuBatalla" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 495.271, 429.32 )


